--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,11 +1,12 @@
 on: [push]
+
 jobs:
   build:
-    name:Greeting
-    runs-on:ubuntu-latest
+    name: Greeting
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Run a multi-line script
-    run: |
-      echo add other actions to build,
-      echo test, and deploy your project.
+      run: |
+        echo Add other actions to build,
+        echo test, and deploy your project.
